tests/misc_tests/type_eq_ui_tests/rev_typefn_impl_noninjective-err.stderr
error[E0271]: type mismatch resolving `<NonInjective as RevTypeFn<u8>>::Arg == T`
  --> tests/misc_tests/type_eq_ui_tests/rev_typefn_impl_noninjective-err.rs:8:67
   |
5  | impl<T> TypeFn<T> for NonInjective {
   |      - this type parameter
...
8  |     const TYPE_FN_ASSERTS: () = { let _: typewit::CallInjFn<Self, T>; };
   |                                                                   ^ type mismatch resolving `<NonInjective as RevTypeFn<u8>>::Arg == T`
   |
note: expected this to be `T`
  --> tests/misc_tests/type_eq_ui_tests/rev_typefn_impl_noninjective-err.rs:12:16
   |
12 |     type Arg = ();
   |                ^^
   = note: expected type parameter `T`
                   found unit type `()`
   = note: required for `NonInjective` to implement `InjTypeFn<T>`
